third_party/move/move-compiler/tests/move_check/inlining/resources_valid_noacquires.exp
error[E04020]: missing acquires annotation
   ┌─ tests/move_check/inlining/resources_valid_noacquires.move:12:9
   │
12 │         borrow_global<T>(get_addr(ref))
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The call acquires '0x42::token::Token', but the 'acquires' list for the current function 'get_value` does not contain this type. It must be present in the calling context's acquires list

